apps/dokploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dokploy
  namespace: dokploy
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: dokploy
  namespace: dokploy
  labels:
    kubernetes.io/service-name: dokploy
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 3000
endpoints:
  - addresses:
      - 192.168.88.189
    conditions:
      ready: true
